@startuml

title __APP's Class Diagram__\n

  package hu.bme.aut.android.chainreaction {
    class BuildConfig {
    }
  }
  

  package model {
    enum Direction {
    }
  }
  

  package model {
    class Field {
    }
  }
  

  package model {
    class GamePlay {
    }
  }
  

  package model {
    class Particle {
    }
  }
  

  package model {
    abstract class Player {
    }
  }
  

  package model {
    class PlayerAI {
    }
  }
  

  package model {
    class PlayerHuman {
    }
  }
  

  package ai {
    class PlayerLogic {
    }
  }
  

  package model.db {
    class PlayerTypeStatDAO_Impl {
    }
  }
  

  package model.db {
    class PlayerTypeStatsDatabase_Impl {
    }
  }
  

  package model {
    class Playground {
    }
  }
  

  Field o-- Particle : particle
  Field o-- Playground : playground
  GamePlay -up-|> IGameModel
  GamePlay o-- Playground : playground
  GamePlay o-- GamePresenter : presenter
  Particle o-- Field : field
  Particle o-- Player : owner
  Player o-- GamePlay : gamePlay
  PlayerAI -up-|> Player
  PlayerHuman -up-|> Player
  PlayerTypeStatDAO_Impl -up-|> PlayerTypeStatDAO
  PlayerTypeStatsDatabase_Impl -up-|> PlayerTypeStatsDatabase
  PlayerTypeStatsDatabase_Impl o-- PlayerTypeStatDAO : _playerTypeStatDAO
  Playground o-- GamePlay : gameplay


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
